--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "solid",
+  "name": "solidtypescript",
   "version": "1.0.0",
-  "description": "SOLID é um acrônimo mnemônico que relaciona um tópico de boas práticas de programação a cada letra. A aplicação desses princípios tem por objetivo deixar o projeto mais coeso, reaproveitável e torna a sua manutenção mais simples.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
