--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.15.3",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -22,5 +21,8 @@
     "mysql2": "^3.14.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10"
   }
 }
